# voice_assistant

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: CI_CD.yaml
development/notebooks/: speech.ipynb
requirements/: build.txt  local.txt  test.txt
src/voice_assistant/open_ai/: __init__.py  _base.py  _generate_response.py
src/voice_assistant/open_ai/tests/: test_generate_response.py
src/voice_assistant/text_to_speach/: __init__.py  _base.py  _language.py  _transcriber.py
src/voice_assistant/text_to_speach/tests/: test_language.py  test_transcriber.py
