[project]
name = "voice_assistant"
dynamic = ["version", "dependencies", "optional-dependencies"]
readme = "README.md"
requires-python = ">=3.9"

authors = [{ name = "Chris Pickford" }]

# these are the locations of the requirements files for optional dependencies
[tool.setuptools.dynamic.optional-dependencies]

test = { file = ["requirements/test.txt"] }
build = { file = ["requirements/build.txt"] }
local = { file = ["requirements/local.txt"] }


# system build
[build-system]

requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

#build requirements
[tool.setuptools.dynamic]

version = { file = ["src/voice_assistant/VERSION"] }
dependencies = { file = ["requirements/build.txt"] }
